--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "postgres",
+    "username": "dbadmin",
+    "password": "admin@123456",
     "database": "supercharge_node",
     "host": "127.0.0.1",
     "dialect": "postgres"
